--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "es6-promise-debounce": "^1.0.1",
     "node-sass": "^4.12.0",
+    "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.10",
     "react-color-extractor": "^1.1.2",
