--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "es6-promise-debounce": "^1.0.1",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "query-string": "^6.8.2",
     "react": "^16.8.6",
