--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Talkie",
-  "name": "Talkie - TMDb Client",
+  "name": "Talkie - Movie Explorer",
   "icons": [
     {
       "src": "favicon.ico",
