--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-color-extractor": "^1.1.2",
     "react-dom": "^16.8.6",
     "react-dropdown": "^1.6.4",
+    "react-helmet": "^5.2.1",
     "react-js-pagination": "^3.0.2",
     "react-palette": "^1.0.1",
     "react-reactstrap-pagination": "^1.0.5",
