--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-select": "^3.0.4",
     "react-show-more-text": "^1.2.3",
     "react-slick": "^0.24.0",
+    "react-snap": "^1.23.0",
     "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
