--- a/package.json
+++ b/package.json
@@ -4,33 +4,33 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "es6-promise-debounce": "^1.0.1",
     "lodash": "^4.17.15",
-    "node-sass": "^4.12.0",
-    "query-string": "^6.8.2",
-    "react": "^16.8.6",
-    "react-burger-menu": "^2.6.10",
+    "node-sass": "^4.13.0",
+    "query-string": "^6.9.0",
+    "react": "^16.12.0",
+    "react-burger-menu": "^2.6.13",
     "react-color-extractor": "^1.1.2",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.12.0",
     "react-dropdown": "^1.6.4",
     "react-helmet": "^5.2.1",
     "react-js-pagination": "^3.0.2",
     "react-palette": "^1.0.1",
-    "react-reactstrap-pagination": "^1.0.5",
-    "react-redux": "^7.1.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
-    "react-select": "^3.0.4",
-    "react-show-more-text": "^1.2.3",
+    "react-reactstrap-pagination": "^1.0.6",
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.0",
+    "react-select": "^3.0.8",
+    "react-show-more-text": "^1.3.0",
     "react-slick": "^0.24.0",
     "react-snap": "^1.23.0",
-    "reactstrap": "^8.0.1",
+    "reactstrap": "^8.2.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.5",
-    "scrollto-with-animation": "^4.5.2",
+    "redux-saga": "^1.1.3",
+    "scrollto-with-animation": "^4.5.4",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
