--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "^3.4.3",
     "react-select": "^3.0.8",
     "react-show-more-text": "^1.3.0",
+    "react-side-effect": "^2.1.1",
     "react-slick": "^0.24.0",
     "reactstrap": "^8.2.0",
     "redux": "^4.0.4",
