--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,12 +4,12 @@
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "192x192 64x64 32x32 24x24 16x16",
+      "sizes": "192x192 144x144 64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#c62828",
   "background_color": "#ffffff"
 }
