--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
     "es6-promise-debounce": "^1.0.1",
-    "lodash": "^4.17.20",
-    "node-sass": "^4.14.1",
+    "express": "^4.17.1",
+    "lodash": "^4.17.21",
+    "node-sass": "^6.0.1",
+    "path": "^0.12.7",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-burger-menu": "^2.6.13",
@@ -21,7 +23,7 @@
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.3",
     "react-select": "^3.0.8",
     "react-show-more-text": "^1.3.0",
     "react-side-effect": "^2.1.1",
